--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -17,13 +17,12 @@
 		{% block javascripts %}
             {% block importmap %}
                 {{ importmap('app') }}
-            {% endblock %}
-            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
+            {% endblock %}       
 		{% endblock %}
 	</head>
 		<body>
-		    <main class="bg-body-tertiary vh-100 d-flex justify-content-center align-items-center"> {% block body %}{% endblock %}
+		    <main class="bg-body-tertiary vh-100 d-flex justify-content-center align-items-center"> 
+				{% block body %}{% endblock %}
 			</main>
-			
 	</body>
 </html>
